// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`it generates the overrided resources 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "An auto-generated nested stack for the @http directive.",
  "Parameters": {
    "referencetotransformerrootstackGraphQLAPI20497F53ApiId": {
      "Type": "String",
    },
    "referencetotransformerrootstackS3DeploymentBucket7592718ARef": {
      "Type": "String",
    },
    "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref": {
      "Type": "String",
    },
  },
  "Resources": {
    "Commentcontent2Resolver": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "FieldName": "content2",
        "Kind": "PIPELINE",
        "PipelineConfig": {
          "Functions": [
            {
              "Fn::GetAtt": [
                "httpwwwapicomDataSourceCommentcontent2FunctionhttpwwwapicomDataSourceCommentcontent2FunctionAppSyncFunctionA4F35A01",
                "FunctionId",
              ],
            },
          ],
        },
        "RequestMappingTemplate": "## [Start] Stash resolver specific context.. **
$util.qr($ctx.stash.put("typeName", "Comment"))
$util.qr($ctx.stash.put("fieldName", "content2"))
{}
## [End] Stash resolver specific context.. **",
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.content2.res.vtl",
            ],
          ],
        },
        "TypeName": "Comment",
      },
      "Type": "AWS::AppSync::Resolver",
    },
    "CommentcontentResolver": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "FieldName": "content",
        "Kind": "PIPELINE",
        "PipelineConfig": {
          "Functions": [
            {
              "Fn::GetAtt": [
                "httpwwwapicomDataSourceCommentcontentFunctionhttpwwwapicomDataSourceCommentcontentFunctionAppSyncFunction685EFA2A",
                "FunctionId",
              ],
            },
          ],
        },
        "RequestMappingTemplate": "mockTemplate",
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.content.res.vtl",
            ],
          ],
        },
        "TypeName": "Comment",
      },
      "Type": "AWS::AppSync::Resolver",
    },
    "CommentevenMoreResolver": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "FieldName": "evenMore",
        "Kind": "PIPELINE",
        "PipelineConfig": {
          "Functions": [
            {
              "Fn::GetAtt": [
                "httpwwwgooglecomDataSourceCommentevenMoreFunctionhttpwwwgooglecomDataSourceCommentevenMoreFunctionAppSyncFunction47773D49",
                "FunctionId",
              ],
            },
          ],
        },
        "RequestMappingTemplate": "## [Start] Stash resolver specific context.. **
$util.qr($ctx.stash.put("typeName", "Comment"))
$util.qr($ctx.stash.put("fieldName", "evenMore"))
{}
## [End] Stash resolver specific context.. **",
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.evenMore.res.vtl",
            ],
          ],
        },
        "TypeName": "Comment",
      },
      "Type": "AWS::AppSync::Resolver",
    },
    "CommentmoreResolver": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "FieldName": "more",
        "Kind": "PIPELINE",
        "PipelineConfig": {
          "Functions": [
            {
              "Fn::GetAtt": [
                "httpapicomDataSourceCommentmoreFunctionhttpapicomDataSourceCommentmoreFunctionAppSyncFunction5BEF6F35",
                "FunctionId",
              ],
            },
          ],
        },
        "RequestMappingTemplate": "## [Start] Stash resolver specific context.. **
$util.qr($ctx.stash.put("typeName", "Comment"))
$util.qr($ctx.stash.put("fieldName", "more"))
{}
## [End] Stash resolver specific context.. **",
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.more.res.vtl",
            ],
          ],
        },
        "TypeName": "Comment",
      },
      "Type": "AWS::AppSync::Resolver",
    },
    "CommentstillMoreResolver": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "FieldName": "stillMore",
        "Kind": "PIPELINE",
        "PipelineConfig": {
          "Functions": [
            {
              "Fn::GetAtt": [
                "httpswwwapicomDataSourceCommentstillMoreFunctionhttpswwwapicomDataSourceCommentstillMoreFunctionAppSyncFunction51FAE1A5",
                "FunctionId",
              ],
            },
          ],
        },
        "RequestMappingTemplate": "## [Start] Stash resolver specific context.. **
$util.qr($ctx.stash.put("typeName", "Comment"))
$util.qr($ctx.stash.put("fieldName", "stillMore"))
{}
## [End] Stash resolver specific context.. **",
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.stillMore.res.vtl",
            ],
          ],
        },
        "TypeName": "Comment",
      },
      "Type": "AWS::AppSync::Resolver",
    },
    "httpapicomDataSource": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "HttpConfig": {
          "Endpoint": "mockEndpoint",
        },
        "Name": "httpapicomDataSource",
        "ServiceRoleArn": "mockArn",
        "Type": "HTTP",
      },
      "Type": "AWS::AppSync::DataSource",
    },
    "httpapicomDataSourceCommentmoreFunctionhttpapicomDataSourceCommentmoreFunctionAppSyncFunction5BEF6F35": {
      "DependsOn": [
        "httpapicomDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "httpapicomDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "httpapicomDataSourceCommentmoreFunction",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.more.DataResolver.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.more.DataResolver.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "httpapicomDataSourceServiceRoleC12170E3": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "appsync.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "httpswwwapicomDataSource": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "HttpConfig": {
          "Endpoint": "mockEndpoint",
        },
        "Name": "httpswwwapicomDataSource",
        "ServiceRoleArn": "mockArn",
        "Type": "HTTP",
      },
      "Type": "AWS::AppSync::DataSource",
    },
    "httpswwwapicomDataSourceCommentstillMoreFunctionhttpswwwapicomDataSourceCommentstillMoreFunctionAppSyncFunction51FAE1A5": {
      "DependsOn": [
        "httpswwwapicomDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "httpswwwapicomDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "httpswwwapicomDataSourceCommentstillMoreFunction",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.stillMore.DataResolver.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.stillMore.DataResolver.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "httpswwwapicomDataSourceServiceRoleDE26F49B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "appsync.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "httpwwwapicomDataSource": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "HttpConfig": {
          "Endpoint": "mockEndpoint",
        },
        "Name": "httpwwwapicomDataSource",
        "ServiceRoleArn": "mockArn",
        "Type": "HTTP",
      },
      "Type": "AWS::AppSync::DataSource",
    },
    "httpwwwapicomDataSourceCommentcontent2FunctionhttpwwwapicomDataSourceCommentcontent2FunctionAppSyncFunctionA4F35A01": {
      "DependsOn": [
        "httpwwwapicomDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "httpwwwapicomDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "httpwwwapicomDataSourceCommentcontent2Function",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.content2.DataResolver.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.content2.DataResolver.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "httpwwwapicomDataSourceCommentcontentFunctionhttpwwwapicomDataSourceCommentcontentFunctionAppSyncFunction685EFA2A": {
      "DependsOn": [
        "httpwwwapicomDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "httpwwwapicomDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "httpwwwapicomDataSourceCommentcontentFunction",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.content.DataResolver.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.content.DataResolver.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "httpwwwapicomDataSourceServiceRole20167D8C": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "appsync.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "httpwwwgooglecomDataSource": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "HttpConfig": {
          "Endpoint": "mockEndpoint",
        },
        "Name": "httpwwwgooglecomDataSource",
        "ServiceRoleArn": "mockArn",
        "Type": "HTTP",
      },
      "Type": "AWS::AppSync::DataSource",
    },
    "httpwwwgooglecomDataSourceCommentevenMoreFunctionhttpwwwgooglecomDataSourceCommentevenMoreFunctionAppSyncFunction47773D49": {
      "DependsOn": [
        "httpwwwgooglecomDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "httpwwwgooglecomDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "httpwwwgooglecomDataSourceCommentevenMoreFunction",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.evenMore.DataResolver.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.evenMore.DataResolver.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "httpwwwgooglecomDataSourceServiceRole08261832": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "appsync.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`it skips override if file does not exist 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "An auto-generated nested stack for the @http directive.",
  "Parameters": {
    "referencetotransformerrootstackGraphQLAPI20497F53ApiId": {
      "Type": "String",
    },
    "referencetotransformerrootstackS3DeploymentBucket7592718ARef": {
      "Type": "String",
    },
    "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref": {
      "Type": "String",
    },
  },
  "Resources": {
    "Commentcontent2Resolver": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "FieldName": "content2",
        "Kind": "PIPELINE",
        "PipelineConfig": {
          "Functions": [
            {
              "Fn::GetAtt": [
                "httpwwwapicomDataSourceCommentcontent2FunctionhttpwwwapicomDataSourceCommentcontent2FunctionAppSyncFunctionA4F35A01",
                "FunctionId",
              ],
            },
          ],
        },
        "RequestMappingTemplate": "## [Start] Stash resolver specific context.. **
$util.qr($ctx.stash.put("typeName", "Comment"))
$util.qr($ctx.stash.put("fieldName", "content2"))
{}
## [End] Stash resolver specific context.. **",
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.content2.res.vtl",
            ],
          ],
        },
        "TypeName": "Comment",
      },
      "Type": "AWS::AppSync::Resolver",
    },
    "CommentcontentResolver": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "FieldName": "content",
        "Kind": "PIPELINE",
        "PipelineConfig": {
          "Functions": [
            {
              "Fn::GetAtt": [
                "httpwwwapicomDataSourceCommentcontentFunctionhttpwwwapicomDataSourceCommentcontentFunctionAppSyncFunction685EFA2A",
                "FunctionId",
              ],
            },
          ],
        },
        "RequestMappingTemplate": "## [Start] Stash resolver specific context.. **
$util.qr($ctx.stash.put("typeName", "Comment"))
$util.qr($ctx.stash.put("fieldName", "content"))
{}
## [End] Stash resolver specific context.. **",
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.content.res.vtl",
            ],
          ],
        },
        "TypeName": "Comment",
      },
      "Type": "AWS::AppSync::Resolver",
    },
    "CommentevenMoreResolver": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "FieldName": "evenMore",
        "Kind": "PIPELINE",
        "PipelineConfig": {
          "Functions": [
            {
              "Fn::GetAtt": [
                "httpwwwgooglecomDataSourceCommentevenMoreFunctionhttpwwwgooglecomDataSourceCommentevenMoreFunctionAppSyncFunction47773D49",
                "FunctionId",
              ],
            },
          ],
        },
        "RequestMappingTemplate": "## [Start] Stash resolver specific context.. **
$util.qr($ctx.stash.put("typeName", "Comment"))
$util.qr($ctx.stash.put("fieldName", "evenMore"))
{}
## [End] Stash resolver specific context.. **",
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.evenMore.res.vtl",
            ],
          ],
        },
        "TypeName": "Comment",
      },
      "Type": "AWS::AppSync::Resolver",
    },
    "CommentmoreResolver": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "FieldName": "more",
        "Kind": "PIPELINE",
        "PipelineConfig": {
          "Functions": [
            {
              "Fn::GetAtt": [
                "httpapicomDataSourceCommentmoreFunctionhttpapicomDataSourceCommentmoreFunctionAppSyncFunction5BEF6F35",
                "FunctionId",
              ],
            },
          ],
        },
        "RequestMappingTemplate": "## [Start] Stash resolver specific context.. **
$util.qr($ctx.stash.put("typeName", "Comment"))
$util.qr($ctx.stash.put("fieldName", "more"))
{}
## [End] Stash resolver specific context.. **",
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.more.res.vtl",
            ],
          ],
        },
        "TypeName": "Comment",
      },
      "Type": "AWS::AppSync::Resolver",
    },
    "CommentstillMoreResolver": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "FieldName": "stillMore",
        "Kind": "PIPELINE",
        "PipelineConfig": {
          "Functions": [
            {
              "Fn::GetAtt": [
                "httpswwwapicomDataSourceCommentstillMoreFunctionhttpswwwapicomDataSourceCommentstillMoreFunctionAppSyncFunction51FAE1A5",
                "FunctionId",
              ],
            },
          ],
        },
        "RequestMappingTemplate": "## [Start] Stash resolver specific context.. **
$util.qr($ctx.stash.put("typeName", "Comment"))
$util.qr($ctx.stash.put("fieldName", "stillMore"))
{}
## [End] Stash resolver specific context.. **",
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.stillMore.res.vtl",
            ],
          ],
        },
        "TypeName": "Comment",
      },
      "Type": "AWS::AppSync::Resolver",
    },
    "httpapicomDataSource": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "HttpConfig": {
          "Endpoint": "http://api.com",
        },
        "Name": "httpapicomDataSource",
        "ServiceRoleArn": {
          "Fn::GetAtt": [
            "httpapicomDataSourceServiceRoleC12170E3",
            "Arn",
          ],
        },
        "Type": "HTTP",
      },
      "Type": "AWS::AppSync::DataSource",
    },
    "httpapicomDataSourceCommentmoreFunctionhttpapicomDataSourceCommentmoreFunctionAppSyncFunction5BEF6F35": {
      "DependsOn": [
        "httpapicomDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "httpapicomDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "httpapicomDataSourceCommentmoreFunction",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.more.DataResolver.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.more.DataResolver.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "httpapicomDataSourceServiceRoleC12170E3": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "appsync.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "httpswwwapicomDataSource": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "HttpConfig": {
          "Endpoint": "https://www.api.com",
        },
        "Name": "httpswwwapicomDataSource",
        "ServiceRoleArn": {
          "Fn::GetAtt": [
            "httpswwwapicomDataSourceServiceRoleDE26F49B",
            "Arn",
          ],
        },
        "Type": "HTTP",
      },
      "Type": "AWS::AppSync::DataSource",
    },
    "httpswwwapicomDataSourceCommentstillMoreFunctionhttpswwwapicomDataSourceCommentstillMoreFunctionAppSyncFunction51FAE1A5": {
      "DependsOn": [
        "httpswwwapicomDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "httpswwwapicomDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "httpswwwapicomDataSourceCommentstillMoreFunction",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.stillMore.DataResolver.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.stillMore.DataResolver.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "httpswwwapicomDataSourceServiceRoleDE26F49B": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "appsync.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "httpwwwapicomDataSource": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "HttpConfig": {
          "Endpoint": "http://www.api.com",
        },
        "Name": "httpwwwapicomDataSource",
        "ServiceRoleArn": {
          "Fn::GetAtt": [
            "httpwwwapicomDataSourceServiceRole20167D8C",
            "Arn",
          ],
        },
        "Type": "HTTP",
      },
      "Type": "AWS::AppSync::DataSource",
    },
    "httpwwwapicomDataSourceCommentcontent2FunctionhttpwwwapicomDataSourceCommentcontent2FunctionAppSyncFunctionA4F35A01": {
      "DependsOn": [
        "httpwwwapicomDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "httpwwwapicomDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "httpwwwapicomDataSourceCommentcontent2Function",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.content2.DataResolver.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.content2.DataResolver.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "httpwwwapicomDataSourceCommentcontentFunctionhttpwwwapicomDataSourceCommentcontentFunctionAppSyncFunction685EFA2A": {
      "DependsOn": [
        "httpwwwapicomDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "httpwwwapicomDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "httpwwwapicomDataSourceCommentcontentFunction",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.content.DataResolver.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.content.DataResolver.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "httpwwwapicomDataSourceServiceRole20167D8C": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "appsync.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "httpwwwgooglecomDataSource": {
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "HttpConfig": {
          "Endpoint": "http://www.google.com",
        },
        "Name": "httpwwwgooglecomDataSource",
        "ServiceRoleArn": {
          "Fn::GetAtt": [
            "httpwwwgooglecomDataSourceServiceRole08261832",
            "Arn",
          ],
        },
        "Type": "HTTP",
      },
      "Type": "AWS::AppSync::DataSource",
    },
    "httpwwwgooglecomDataSourceCommentevenMoreFunctionhttpwwwgooglecomDataSourceCommentevenMoreFunctionAppSyncFunction47773D49": {
      "DependsOn": [
        "httpwwwgooglecomDataSource",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "referencetotransformerrootstackGraphQLAPI20497F53ApiId",
        },
        "DataSourceName": {
          "Fn::GetAtt": [
            "httpwwwgooglecomDataSource",
            "Name",
          ],
        },
        "FunctionVersion": "2018-05-29",
        "Name": "httpwwwgooglecomDataSourceCommentevenMoreFunction",
        "RequestMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.evenMore.DataResolver.req.vtl",
            ],
          ],
        },
        "ResponseMappingTemplateS3Location": {
          "Fn::Join": [
            "",
            [
              "s3://",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentBucket7592718ARef",
              },
              "/",
              {
                "Ref": "referencetotransformerrootstackS3DeploymentRootKeyA71EA735Ref",
              },
              "/resolvers/Comment.evenMore.DataResolver.res.vtl",
            ],
          ],
        },
      },
      "Type": "AWS::AppSync::FunctionConfiguration",
    },
    "httpwwwgooglecomDataSourceServiceRole08261832": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "appsync.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
